# aurelia-vault-7421

./: .env.example  .gitattributes  .gitignore  DEV_PLAN.md  PLAN.md  README.md  REPORT.md  dashboard.html  dashboard.py  discoveries.json  discovery_log.jsonl  health.json  pattern_log.jsonl  patterns.json  pyproject.toml  requirements.txt  run.py  self_improve_log.jsonl  serve.py  settings.json  strategy_state.json  trades.db
.github/workflows/: bot.yml  tests.yml
btcbot/: __init__.py  backtest.py  bankroll.py  calibration.py  config.py  data.py  discover.py  edge_report.py  engine.py  errors.py  exchange.py  executor.py  health.py  indicators.py  patterns.py  predictions.py  resolver.py  self_improve.py  store.py  strategy.py
btcbot/strategies/: __init__.py  base.py  breakout_donchian.py  claude_pred.py  funding_arb.py  momentum_ema_cross.py  nsigma_fade.py  pattern_driven.py
prompts/: predict_direction.md
reports/: latest.json  latest.md  report_day_01.md  report_day_02.md  report_day_03.md  report_day_04.md  report_day_05.md  report_day_06.md  report_day_07.md  report_day_08.md  report_day_09.md
tests/: conftest.py  test_backtest_synthetic.py  test_calibration.py  test_executor_paper.py  test_gates.py  test_indicators.py  test_kelly.py  test_predictions.py  test_resolver.py  test_self_improve.py  test_smoke.py  test_store_atomicity.py  test_strategies_basic.py  test_strategy_smoke.py
