[project]
name = "btcbot"
version = "0.1.0"
description = "Bitcoin paper-trading bot, polybot-style. PAPER MODE ONLY."
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004", "PLR0912", "PLR0915"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
